[tool.poetry]
name = "minecraft-shodan"
version = "0.1.0"
description = "Fetch minecraft servers open on Shodan.io"
authors = ["Benjamin Catouillard <catouillard.benjamin@gmail.com>"]
readme = "README.md"
packages = [{include = "minecraft_shodan"}]

[tool.poetry.dependencies]
python = "^3.10"
shodan = "^1.28.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
bandit = "^1.7.5"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
